@@ -12,7 +12,7 @@ re-write Zip files with full precision. </p>
 <p> The <a target="_top" href="doc-files/changelog.txt" >change log file</a> shows the various
 features and bug fixes in each version. </p>
 
-<p> <a target="_top" href="https://github.com/j256/simplezip" >SimpleZip home page</a>. </p>
+<p> <a target="_top" href="https://256stuff.com/sources/simplezip/" >SimpleZip home page</a>. </p>
 
 </body>
 </html>
